--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,18 +4,20 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@drawable/home"
-        android:title="Home" />
+        android:icon="@drawable/news"
+        android:title="News" />
+
     <item
         android:id="@+id/search"
-        android:icon="@drawable/search"
-        android:title="Search" />
+        android:icon="@drawable/virus"
+        android:title="Cases" />
     <item
         android:id="@+id/cart"
-        android:icon="@drawable/cart"
-        android:title="Cart" />
-    <item
-        android:id="@+id/settings"
-        android:icon="@drawable/settings"
-        android:title="Settings" />
+        android:icon="@drawable/inoculate"
+        android:title="Vaccine" />
+
+<!--    <item-->
+<!--        android:id="@+id/settings"-->
+<!--        android:icon="@drawable/settings"-->
+<!--        android:title="Settings" />-->
 </menu>
